5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4057/executions/1601_1802.log
== TEST (2019-03-22 16:50:31) 
-- CODE:
from math import *
p = float(input"Quantos pontos de vida iniciais? ")
D1 = int(input("Qual o valor sorteado no primeiro dado? "))
D2 = int(input("Qual o valor sorteado no segundo dado? "))
raiz = sqrt(5*D1) 
dano = raiz + pi*D2/3
print(dano)
-- ERROR:
File "XXXX", line 2
    p = float(input"Quantos pontos de vida iniciais? ")
                                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 16:51:35) 
-- CODE:
from math import *
f = float(input"Quantos pontos de vida iniciais? ")
D1 = int(input("Qual o valor sorteado no primeiro dado? "))
D2 = int(input("Qual o valor sorteado no segundo dado? "))
raiz = sqrt(5*D1) 
dano = raiz + pi*D2/3
print(dano)
-- ERROR:
File "XXXX", line 2
    f = float(input"Quantos pontos de vida iniciais? ")
                                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 16:51:54) 
-- CODE:
from math import *
f = int(input"Quantos pontos de vida iniciais? ")
D1 = int(input("Qual o valor sorteado no primeiro dado? "))
D2 = int(input("Qual o valor sorteado no segundo dado? "))
raiz = sqrt(5*D1) 
dano = raiz + pi*D2/3
print(dano)
-- ERROR:
File "XXXX", line 2
    f = int(input"Quantos pontos de vida iniciais? ")
                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 16:52:31) 
-- CODE:
from math import *
f = float(input("Quantos pontos de vida iniciais? "))
D1 = int(input("Qual o valor sorteado no primeiro dado? "))
D2 = int(input("Qual o valor sorteado no segundo dado? "))
raiz = sqrt(5*D1) 
dano = raiz + pi*D2/3
print(dano)
-- OUTPUT:
8.519253284679376
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 16:52:59) 
-- CODE:
from math import *
f = float(input("Quantos pontos de vida iniciais? "))
D1 = int(input("Qual o valor sorteado no primeiro dado? "))
D2 = int(input("Qual o valor sorteado no segundo dado? "))
raiz = sqrt(5*D1) 
dano = raiz + pi*D2/3
print(dano)
-- OUTPUT:
8.519253284679376
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 16:54:42) 
-- CODE:
from math import *
f = float(input("Quantos pontos de vida iniciais? "))
D1 = int(input("Qual o valor sorteado no primeiro dado? "))
D2 = int(input("Qual o valor sorteado no segundo dado? "))
raiz = sqrt(5*D1) 
dano = raiz + pi*D2/3
vida= round(f - dano, 0)
print(vida)
-- OUTPUT:
191.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 16:55:38) 
-- CODE:
from math import *
f = float(input("Quantos pontos de vida iniciais? "))
D1 = int(input("Qual o valor sorteado no primeiro dado? "))
D2 = int(input("Qual o valor sorteado no segundo dado? "))
raiz = sqrt(5*D1) 
dano = raiz + pi*D2/3
vida= round(f - dano, 0)
print(vida)
-- OUTPUT:
191.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 16:56:07) 
-- CODE:
from math import *
f = float(input("Quantos pontos de vida iniciais? "))
D1 = int(input("Qual o valor sorteado no primeiro dado? "))
D2 = int(input("Qual o valor sorteado no segundo dado? "))
raiz = sqrt(5*D1) 
dano = raiz + pi*D2/3
vida= (f - dano)
print(vida)
-- OUTPUT:
191.48074671532063
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 16:56:29) 
-- CODE:
from math import *
f = float(input("Quantos pontos de vida iniciais? "))
D1 = int(input("Qual o valor sorteado no primeiro dado? "))
D2 = int(input("Qual o valor sorteado no segundo dado? "))
raiz = sqrt(5*D1) 
dano = raiz + pi*D2/3
vida= (f - dano)
print(vida)
-- EXECUTION TIME:
0.130272
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
191.48074671532063
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
288.23958911776873
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496.7167344713036
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 16:57:00) 
-- CODE:
from math import *
f = int(input("Quantos pontos de vida iniciais? "))
D1 = int(input("Qual o valor sorteado no primeiro dado? "))
D2 = int(input("Qual o valor sorteado no segundo dado? "))
raiz = sqrt(5*D1) 
dano = raiz + pi*D2/3
vida= (f - dano)
print(vida)
-- OUTPUT:
191.48074671532063
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 16:57:16) 
-- CODE:
from math import *
f = int(input("Quantos pontos de vida iniciais? "))
D1 = int(input("Qual o valor sorteado no primeiro dado? "))
D2 = int(input("Qual o valor sorteado no segundo dado? "))
raiz = sqrt(5*D1) 
dano = raiz + pi*D2/3
vida= (f - dano)
print(vida)
-- OUTPUT:
191.48074671532063
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 16:57:49) 
-- CODE:
from math import *
f = int(input("Quantos pontos de vida iniciais? "))
D1 = int(input("Qual o valor sorteado no primeiro dado? "))
D2 = int(input("Qual o valor sorteado no segundo dado? "))
raiz = sqrt(5*D1) 
dano = raiz + pi**(D2/3)
vida= (f - dano)
print(vida)
-- OUTPUT:
187.89432762141087
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 16:58:24) 
-- CODE:
from math import *
f = int(input("Quantos pontos de vida iniciais? "))
D1 = int(input("Qual o valor sorteado no primeiro dado? "))
D2 = int(input("Qual o valor sorteado no segundo dado? "))
raiz = sqrt(5*D1) 
dano = raiz + pi ** (D2/3)
vida= (f - dano)
print(vida)
-- OUTPUT:
187.89432762141087
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 17:00:11) 
-- CODE:
from math import *
f = float(input("Quantos pontos de vida iniciais? "))
D1 = int(input("Qual o valor sorteado no primeiro dado? "))
D2 = int(input("Qual o valor sorteado no segundo dado? "))
raiz = sqrt(5*D1) 
dano = raiz + pi ** (D2/3)
vida= (f - dano)
print(int vida)
-- ERROR:
File "XXXX", line 8
    print(int vida)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 17:00:35) 
-- CODE:
from math import *
f = float(input("Quantos pontos de vida iniciais? "))
D1 = int(input("Qual o valor sorteado no primeiro dado? "))
D2 = int(input("Qual o valor sorteado no segundo dado? "))
raiz = sqrt(5*D1) 
dano = raiz + pi ** (D2/3)
vida= (f - dano)
a = int (vida)
print(a)
-- OUTPUT:
187
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 17:00:56) 
-- CODE:
from math import *
f = float(input("Quantos pontos de vida iniciais? "))
D1 = int(input("Qual o valor sorteado no primeiro dado? "))
D2 = int(input("Qual o valor sorteado no segundo dado? "))
raiz = sqrt(5*D1) 
dano = raiz + pi ** (D2/3)
vida= (f - dano)
a = int (vida)
print(a)
-- EXECUTION TIME:
0.120567
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
187
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
284
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 17:04:35) 
-- CODE:
from math import *
f = float(input("Quantos pontos de vida iniciais? "))
D1 = int(input("Qual o valor sorteado no primeiro dado? "))
D2 = int(input("Qual o valor sorteado no segundo dado? "))
raiz = sqrt(5*D1) 
s = (D2/3)
dano = raiz + pi**s
vida= (f - dano)
a = int (vida)
print(a)
-- OUTPUT:
187
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 17:04:50) 
-- CODE:
from math import *
f = float(input("Quantos pontos de vida iniciais? "))
D1 = int(input("Qual o valor sorteado no primeiro dado? "))
D2 = int(input("Qual o valor sorteado no segundo dado? "))
raiz = sqrt(5*D1) 
s = (D2/3)
dano = raiz + pi**s
vida= (f - dano)
a = int (vida)
print(a)
-- OUTPUT:
187
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 17:05:00) 
-- CODE:
from math import *
f = float(input("Quantos pontos de vida iniciais? "))
D1 = int(input("Qual o valor sorteado no primeiro dado? "))
D2 = int(input("Qual o valor sorteado no segundo dado? "))
raiz = sqrt(5*D1) 
s = (D2/3)
dano = raiz + pi**s
vida= (f - dano)
a = int (vida)
print(a)
-- OUTPUT:
187
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 17:05:22) 
-- CODE:
from math import *
f = float(input("Quantos pontos de vida iniciais? "))
D1 = int(input("Qual o valor sorteado no primeiro dado? "))
D2 = int(input("Qual o valor sorteado no segundo dado? "))
raiz = sqrt(5*D1) 
s = (D2/3)
dano = raiz + pi**s
vida= (f - dano)
a = int (vida)
print(a)
-- EXECUTION TIME:
0.172391
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
187
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
284
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 17:05:32) 
-- CODE:
from math import *
f = float(input("Quantos pontos de vida iniciais? "))
D1 = int(input("Qual o valor sorteado no primeiro dado? "))
D2 = int(input("Qual o valor sorteado no segundo dado? "))
raiz = sqrt(5*D1) 
s = (D2/3)
dano = raiz + pi**s
vida= (f - dano)
a = int (vida)
print(a)
-- EXECUTION TIME:
0.216404
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
187
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
284
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 17:06:40) 
-- CODE:
from math import *
f = int(input("Quantos pontos de vida iniciais? "))
D1 = int(input("Qual o valor sorteado no primeiro dado? "))
D2 = int(input("Qual o valor sorteado no segundo dado? "))
raiz = sqrt(5*D1) 
s = (D2/3)
dano = raiz + pi*s
vida= (f - dano)
a = int (vida)
print(a)
-- OUTPUT:
191
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 17:06:52) 
-- CODE:
from math import *
f = int(input("Quantos pontos de vida iniciais? "))
D1 = int(input("Qual o valor sorteado no primeiro dado? "))
D2 = int(input("Qual o valor sorteado no segundo dado? "))
raiz = sqrt(5*D1) 
s = (D2/3)
dano = raiz + pi*s
vida= (f - dano)
a = int (vida)
print(a)
-- EXECUTION TIME:
0.174045
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
191
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
288
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 17:08:48) 
-- CODE:
from math import *
f = int(input("Quantos pontos de vida iniciais? "))
D1 = int(input("Qual o valor sorteado no primeiro dado? "))
D2 = int(input("Qual o valor sorteado no segundo dado? "))
raiz = sqrt(5*D1) 
s = (D2/3)
dano = raiz + pi*s
vida= (f - dano)
a = int (vida + 1)
print(a)
-- EXECUTION TIME:
0.196363
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 17:10:31) 
-- CODE:
from math import *
f = int(input("Quantos pontos de vida iniciais? "))
D1 = int(input("Qual o valor sorteado no primeiro dado? "))
D2 = int(input("Qual o valor sorteado no segundo dado? ")) 
dano = sqrt(5*D1) + pi**(D2/3)
vida= (f - dano)
a = int (vida)
print(a)
-- OUTPUT:
187
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 17:11:06) 
-- CODE:
from math import *
f = int(input("Quantos pontos de vida iniciais? "))
D1 = int(input("Qual o valor sorteado no primeiro dado? "))
D2 = int(input("Qual o valor sorteado no segundo dado? ")) 
dano = sqrt(5*D1) + pi**(D2/3)
vida= (f - dano)
a = int(vida)
print(a+1)
-- EXECUTION TIME:
0.215474
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
